move main add ruff isort

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,26 @@ dependencies = [
 wilds = [
     "wilds>=2.0.0",
 ]
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = [
+  "E",  # pycodestyle
+  "F",  # pyflakes
+  "I",  # isort
+]
+ignore = [
+  "F841",  # assigned but unused variable
+  "F821",  # undefined name
+  "E731",  # do not assign lambda
+  "E722",  # do not use bare except
+  "E402",  # module import not at top of file
+  "E501",  # line too long
+]
+
+
+[tool.ruff.lint.isort]
+# force-single-line = true
+force-sort-within-sections = true
