--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pillow>=11.3.0",
     "torch>=2.7.1",
     "torchvision>=0.22.1",
+    "tyro>=0.9.26",
 ]
 
 [project.optional-dependencies]
