--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "numpy>=2.3.1",
     "pandas>=2.3.1",
     "pillow>=11.3.0",
+    "rich>=14.0.0",
     "torch>=2.7.1",
     "torchvision>=0.22.1",
     "tyro>=0.9.26",
